Added some about stuff Removed font base64

--- a/src/about.html
+++ b/src/about.html
@@ -5,17 +5,84 @@ layout: base.njk
 
 <div class="section">
     <div class="section__content section__content--narrow">
-        <h1 class="align-c">About me</h1>
+        <h1 class="align-c">マックス<span>・</span>About me</h1>
+        <h2 class="align-c">Web-Developer & Sleight of Hand Artist</h2>
         <p class="fs-lg align-c">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a esse accusantium dolores, aut veritatis corporis laborum, et quia atque veniam quae omnis sit sed mollitia reprehenderit? Veniam, ab ad.
         </p>
     </div>
 
     <div class="section__content">
-        Normal
+        <div class="grid">
+            <div class="grid__col-12 grid__col-sm-4 grid__col-md-6 align-c">
+                <img src="/assets/images/me.jpg" alt="" />
+            </div>
+            <div class="grid__col-12 grid__col-sm-8 grid__col-md-6 grid__col--vcentered">
+                <h3>Hi, my name is Max.</h3>
+                <p>I&rsquo;m a German based web-developer. Currently 28 years old and living in the beautiful city of Mainz.</p>
+                <p>Besides programming things I love many other things too, you can read about them <a href="/hobbies" class="link">here</a>.</p>
+            </div>
+        </div>
     </div>
 
     <div class="section__content section__content--wide">
-        Wide
+        <div class="grid ff-sans">
+            <div class="grid__col-6">
+                <h3>Experience</h3>
+
+                <ul class="list list--plus">
+                    <li>
+                        <span class="c-primary">CallOne GmbH</span> // <span class="c-primary">Senior Frontend-Webdeveloper</span><br />
+                        <span class="fs-sm">June 2021 - Present</span>
+                    </li>
+                    <li>
+                        <span class="c-primary">matterial GmbH</span> // <span class="c-primary">Senior Frontend-Webdeveloper</span><br />
+                        <span class="fs-sm">November 2017 - May 2021</span>
+                    </li>
+                    <li>
+                        <span class="c-primary">Opoloo GbR</span> // <span class="c-primary">Frontend-Webdeveloper</span><br />
+                        <span class="fs-sm">August 2013 - Oktober 2017</span>
+                    </li>
+                    <li>
+                        <span class="c-primary">RootconnecT e.K.</span> // <span class="c-primary">IT Trainee</span><br />
+                        <span class="fs-sm">August 2010 - July 2013</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="grid__col-3">
+                <h3>Skills</h3>
+
+                <div class="grid fs-sm" style="--gutter:1px">
+                    <div class="grid__col-6">
+                        <ul class="list">
+                            <li><h4>Knowledge</h4></li>
+                            <li>HTML / HAML</li>
+                            <li>CSS / SASS</li>
+                            <li>Javascript</li>
+                            <li>PHP</li>
+                            <li>MySQL</li>
+                        </ul>
+                    </div>
+                    <div class="grid__col-6">
+                        <ul class="list">
+                            <li><h4>Tools</h4></li>
+                            <li>jQuery</li>
+                            <li>VSCode</li>
+                            <li>Sublime Text</li>
+                            <li>Github</li>
+                            <li>Linux</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="grid__col-3">
+                <h3>Languages</h3>
+                <ul class="list">
+                    <li>German</li>
+                    <li>English</li>
+                    <li>Japanese</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
