Added blog page and scrollbar styles

--- a/src/about.html
+++ b/src/about.html
@@ -4,12 +4,9 @@ layout: base.njk
 ---
 
 <div class="section">
-    <div class="section__content section__content--narrow">
-        <h1 class="align-c">マックス<span>・</span>About me</h1>
-        <h2 class="align-c">Web-Developer & Sleight of Hand Artist</h2>
-        <p class="fs-lg align-c">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam a esse accusantium dolores, aut veritatis corporis laborum, et quia atque veniam quae omnis sit sed mollitia reprehenderit? Veniam, ab ad.
-        </p>
+    <div class="section__content section__content--narrow align-c">
+        <h1>マックス<span>・</span>About me</h1>
+        <h2>Web-Developer & Sleight of Hand Artist</h2>
     </div>
 
     <div class="section__content">
@@ -20,9 +17,18 @@ layout: base.njk
             <div class="grid__col-12 grid__col-sm-8 grid__col-md-6 grid__col--vcentered">
                 <h3>Hi, my name is Max.</h3>
                 <p>I&rsquo;m a German based web-developer. Currently 28 years old and living in the beautiful city of Mainz.</p>
-                <p>Besides programming things I love many other things too, you can read about them <a href="/hobbies" class="link">here</a>.</p>
+                <p>Besides programming things I love many other things too, you can read more about them <a href="/hobbies" class="link">over here</a>.</p>
+                <p>Feel free to wander around and drop me a message if you have any questions. You can find my socials below or on my <a href="/beacons" class="link">beacons page</a></p>
+                <br />
+                <p>よこそ。私の名前はマックスです。二十八歳です。私の仕事はプログラマーです。ドイツ語と英語とちょっと日本語を話せます。私はドイツ人ですそして、マインツからきました。</p>
             </div>
         </div>
+    </div>
+
+    <div class="section__content section__content--narrow align-c">
+        <p class="fs-lg">
+            I like creating simple and easy to use interfaces.
+        </p>
     </div>
 
     <div class="section__content section__content--wide">
