--- a/src/blog.html
+++ b/src/blog.html
@@ -3,4 +3,17 @@ title: Blog
 layout: base.njk
 ---
 
-Blog
+<div class="section">
+    <div class="section__content section__content--narrow align-c">
+        <h1>書く<span>・</span>Blog</h1>
+        <h2>Sometimes I write about stuff. Don&rsquo;t mind my&mdash;sometimes&mdash;weird thoughts.</h2>
+    </div>
+
+    <div class="section__content">
+        <ul>
+            {%- for post in collections.posts -%}
+                <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+            {%- endfor -%}
+        </ul>
+    </div>
+</div>
