Added iconfont, beacons and hobbies

--- a/src/beacons.html
+++ b/src/beacons.html
@@ -3,4 +3,15 @@ layout: base.njk
 title: Beacons
 ---
 
-All social links
+<div class="beacons">
+    <div class="beacons__box">
+        <a href="https://twitch.tv/4lienb0y" class="beacons__beacon"><span class="icofont-twitch" style="--color:#6441A4"></span> @4lienb0y</a>
+        <a href="https://instagram.com/maxvowinkel" class="beacons__beacon beacons__beacon--highlight"><span class="icofont-instagram" style="--color:#E1306C"></span> @maxvowinkel</a>
+        <a href="https://twitter.com/MyXoToD" class="beacons__beacon"><span class="icofont-twitter" style="--color:#1DA1F2"></span> @MyXoToD</a>
+        <a href="https://www.youtube.com/user/MyXoToD" class="beacons__beacon"><span class="icofont-youtube" style="--color:#FF0000"></span> @MyXoToD</a>
+        <a href="https://open.spotify.com/user/1145610126?si=c5f118e34d8941f4" class="beacons__beacon"><span class="icofont-spotify" style="--color:#1DB954"></span> @Max</a>
+        <a href="https://stackoverflow.com/users/2783423/myxotod" class="beacons__beacon"><span class="icofont-stack-overflow" style="--color:#F48024"></span> @MyXoToD</a>
+        <a href="https://steamcommunity.com/id/4lienb0y" class="beacons__beacon"><span class="icofont-steam" style="--color:#FFFFFF"></span> @4lien</a>
+        <a href="https://github.com/MyXoToD" class="beacons__beacon"><span class="icofont-github" style="--color:#FFFFFF"></span> @MyXoToD</a>
+    </div>
+</div>
