--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -3,4 +3,61 @@ title: Hobbies
 layout: base.njk
 ---
 
-Hobbies
+<div class="section">
+    <div class="section__content section__content--narrow align-c">
+        <h1>楽しい<span>・</span>Hobbies</h1>
+        <h2>Jack of all&mdash;Ace of none</h2>
+    </div>
+
+    <div class="section__content section__content--wide">
+        <div class="hobby">
+            <div class="hobby__image">
+                <img src="https://picsum.photos/id/315/800/450" alt="" />
+            </div>
+            <div class="hobby__info">
+                <h3>Japanese</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt repellendus recusandae exercitationem aut, unde temporibus non dolores hic, quibusdam fugiat et molestias nihil dignissimos voluptatibus tenetur eius minima. Tempore, porro.</p>
+            </div>
+        </div>
+
+        <div class="hobby">
+            <div class="hobby__info">
+                <h3>Programming</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt repellendus recusandae exercitationem aut, unde temporibus non dolores hic, quibusdam fugiat et molestias nihil dignissimos voluptatibus tenetur eius minima. Tempore, porro.</p>
+            </div>
+            <div class="hobby__image">
+                <img src="https://picsum.photos/id/1/800/450" alt="" />
+            </div>
+        </div>
+
+        <div class="hobby">
+            <div class="hobby__image">
+                <img src="https://picsum.photos/id/338/800/450" alt="" />
+            </div>
+            <div class="hobby__info">
+                <h3>Running</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt repellendus recusandae exercitationem aut, unde temporibus non dolores hic, quibusdam fugiat et molestias nihil dignissimos voluptatibus tenetur eius minima. Tempore, porro.</p>
+            </div>
+        </div>
+
+        <div class="hobby">
+            <div class="hobby__info">
+                <h3>Scuba Diving</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt repellendus recusandae exercitationem aut, unde temporibus non dolores hic, quibusdam fugiat et molestias nihil dignissimos voluptatibus tenetur eius minima. Tempore, porro.</p>
+            </div>
+            <div class="hobby__image">
+                <img src="https://picsum.photos/id/147/800/450" alt="" />
+            </div>
+        </div>
+
+        <div class="hobby">
+            <div class="hobby__image">
+                <img src="https://picsum.photos/id/319/800/450" alt="" />
+            </div>
+            <div class="hobby__info">
+                <h3>Photography</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt repellendus recusandae exercitationem aut, unde temporibus non dolores hic, quibusdam fugiat et molestias nihil dignissimos voluptatibus tenetur eius minima. Tempore, porro.</p>
+            </div>
+        </div>
+    </div>
+</div>
