Restructured blog posts§

--- a/src/about.html
+++ b/src/about.html
@@ -11,24 +11,16 @@ layout: base.njk
 
     <div class="section__content">
         <div class="grid">
-            <div class="grid__col-12 grid__col-sm-4 grid__col-md-6 align-c">
+            <div class="grid__col-12 grid__col-sm-4 grid__col-md-5 align-c">
                 <img src="/assets/images/me.jpg" alt="" />
             </div>
-            <div class="grid__col-12 grid__col-sm-8 grid__col-md-6 grid__col--vcentered">
+            <div class="grid__col-12 grid__col-sm-8 grid__col-md-7 grid__col--vcentered">
                 <h3>Hi, my name is Max.</h3>
-                <p>I&rsquo;m a German based web-developer. Currently 28 years old and living in the beautiful city of Mainz.</p>
-                <p>Besides programming things I love many other things too, you can read more about them <a href="/hobbies" class="link">over here</a>.</p>
+                <p>I&rsquo;m a German based web-developer. Currently <span class="age">28</span> years old and living in the beautiful city of Mainz.</p>
+                <p>Besides programming web-applications I do a lot of other things. You can read more about my hobbies <a href="/hobbies" class="link">over here</a>.</p>
                 <p>Feel free to wander around and drop me a message if you have any questions. You can find my socials below or on my <a href="/beacons" class="link">beacons page</a></p>
-                <br />
-                <p>よこそ。私の名前はマックスです。二十八歳です。私の仕事はプログラマーです。ドイツ語と英語とちょっと日本語を話せます。私はドイツ人ですそして、マインツからきました。</p>
             </div>
         </div>
-    </div>
-
-    <div class="section__content section__content--narrow align-c">
-        <p class="fs-lg">
-            I like creating simple and easy to use interfaces.
-        </p>
     </div>
 
     <div class="section__content section__content--wide">
@@ -88,6 +80,34 @@ layout: base.njk
                     <li>English</li>
                     <li>Japanese</li>
                 </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="section__content section__content--narrow">
+        <div class="grid ff-sans">
+            <div class="grid__col-6">
+                <h3>Cool people</h3>
+
+                <ul class="list">
+                    <li>
+                        <a href="https://sirtetris.com" class="link">sirtetris</a> // <span class="c-primary">Tarek</span>
+                    </li>
+                    <li>
+                        <a href="https://kevingimbel.de" class="link">atarijunge</a> // <span class="c-primary">Kevin</span>
+                    </li>
+                    <li>
+                        <a href="https://timpietrusky.com" class="link">NERDDISCO</a> // <span class="c-primary">Tim</span>
+                    </li>
+                    <li>
+                        <a href="https://lucasbonomi.com" class="link">LukyVj</a> // <span class="c-primary">Lucas</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="grid__col-6 grid__col--vcentered">
+                This website is also part of the <a href="https://webring.xxiivv.com/#makkusu-dev" class="link">XXIIVV Webring</a>.<br />
+                <br />
+                &ldquo;This webring is an attempt to inspire artists & developers to build their websites and share traffic amongst each other. The ring welcomes hand-crafted wikis and portfolios.&rdquo;
             </div>
         </div>
     </div>
