--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@ navigation: false
     </div>
     <div class="hub__col hub__col--wide">
         <a href="{{ '/hobbies' | url }}" class="hub__link" data-kanji="3">Hobbies</a>
-        <a href="{{ '/projects' | url }}" class="hub__link" data-kanji="4">Projects</a>
+        <a href="#" class="hub__link hub__link--locked" data-kanji="4" title="soon&hellip;">&nbsp;Projects&nbsp;</a>
     </div>
 </div>
