--- a/src/blog.html
+++ b/src/blog.html
@@ -10,7 +10,7 @@ pagination:
 
 <div class="section">
     <div class="section__content section__content--narrow align-c">
-        <h1>書く<span>・</span>Blog</h1>
+        <h1><a href="/">書く<span>・</span>Blog</a></h1>
         <h2>Sometimes I write about stuff. Don&rsquo;t mind my&mdash;sometimes&mdash;weird thoughts.</h2>
     </div>
 
