Changed some blog styles + linked main headlines to hub

--- a/src/blog.html
+++ b/src/blog.html
@@ -39,7 +39,7 @@ pagination:
                                 {%- endif -%}
                             </div>
                         </header>
-                        <p>{{ post.data.excerpt }}&hellip; <a href="{{ post.url }}" class="link">Continue reading &rarr;</a></p>
+                        <p class="post__excerpt">{{ post.data.excerpt }}&hellip; <a href="{{ post.url }}" class="link">Continue reading &rarr;</a></p>
                     </div>
                 </div>
             {%- endfor -%}
