--- a/src/impressum.html
+++ b/src/impressum.html
@@ -5,11 +5,11 @@ title: Impressum
 
 <div class="section">
     <div class="section__content section__content--narrow align-c">
-        <h1>Impressum</h1>
-        <h2>Legal stuff you know</h2>
+        <h1><a href="/">Impressum<span>・</span>Legal</a></h1>
+        <h2>Contact information</h2>
 
         <p>
-            <strong>Responsible</strong><br />
+            <strong>Managed by</strong><br />
             Maximilian Boll<br />
             [TODO Contact Details]
         </p>
