--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,7 @@ layout: base.njk
 
 <div class="section">
     <div class="section__content section__content--narrow align-c">
-        <h1>マックス<span>・</span>About me</h1>
+        <h1><a href="/">マックス<span>・</span>About me</a></h1>
         <h2>Web-Developer & Sleight of Hand Artist</h2>
     </div>
 
