--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -5,7 +5,7 @@ layout: base.njk
 
 <div class="section">
     <div class="section__content section__content--narrow align-c">
-        <h1>楽しい<span>・</span>Hobbies</h1>
+        <h1><a href="/">楽しい<span>・</span>Hobbies</a></h1>
         <h2>Jack of all&mdash;Ace of none</h2>
     </div>
 
