Started work on first responsive styles

--- a/src/assets/fonts/icofont/demo.html
+++ b/src/assets/fonts/icofont/demo.html
@@ -161,6 +161,15 @@
 			</div>
 		</li>
 		
+		<li>
+			<div class="icon-holder">
+				<div class="icon"> 
+					<i class="icofont-hand-drawn-left"></i>
+				</div> 
+				<span> hand-drawn-left </span>
+			</div>
+		</li>
+		
 		</ul>
 	</div>	
 	</body>
