--- a/src/tags.html
+++ b/src/tags.html
@@ -8,7 +8,7 @@ layout: base
 ---
 
 <a href="/blog" class="post__back" title="Back to all posts">
-    &larr;
+    <span class="icofont-hand-drawn-left"></span>
 </a>
 
 <div class="section">
