Adjusted headlines Testing on hobby page Moved navigation buttons

--- a/src/about.html
+++ b/src/about.html
@@ -4,8 +4,8 @@ layout: base.njk
 ---
 
 <div class="section">
-    <div class="section__content section__content--narrow align-c">
-        <h1><a href="/">マックス<span>・</span>About me</a></h1>
+    <div class="section__content section__content--wide align-c">
+        <h1><a href="/">マックス<span>・私・</span>About me</a></h1>
         <h2>Web-Developer & Sleight of Hand Artist</h2>
     </div>
 
