--- a/src/blog.html
+++ b/src/blog.html
@@ -9,9 +9,9 @@ pagination:
 ---
 
 <div class="section">
-    <div class="section__content section__content--narrow align-c">
-        <h1><a href="/">書く<span>・</span>Blog</a></h1>
-        <h2>Sometimes I write about stuff. Don&rsquo;t mind my&mdash;sometimes&mdash;weird thoughts.</h2>
+    <div class="section__content section__content--wide align-c">
+        <h1><a href="/">Blog</a></h1>
+        <h2>Sometimes I write about stuff.</h2>
     </div>
 
     <div class="section__content">
