--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -5,7 +5,7 @@ layout: base.njk
 
 <div class="section">
     <div class="section__content section__content--narrow align-c">
-        <h1><a href="/">楽しい<span>・</span>Hobbies</a></h1>
+        <h1><a href="/">Hobbies</a></h1>
         <h2>Jack of all&mdash;Ace of none</h2>
     </div>
 
@@ -20,6 +20,31 @@ layout: base.njk
             </div>
         </div>
 
+        <h4>Useful links</h4>
+
+        <div class="grid c-primary ff-sans fs-sm" style="--gutter:1px">
+            <div class="grid__col grid__col-xs-4">
+                <ul class="list">
+                    <li><a href="#">WaniKani</a></li>
+                    <li><a href="#">Jisho</a></li>
+                </ul>
+            </div>
+            <div class="grid__col grid__col-xs-4">
+                <ul class="list">
+                    <li><a href="#">Anki</a></li>
+                    <li><a href="#">HelloTalk</a></li>
+                </ul>
+            </div>
+            <div class="grid__col grid__col-xs-4">
+                <ul class="list">
+                    <li><a href="#">Superprof</a></li>
+                    <li><a href="#">Tandem</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- ------ -->
+
         <div class="hobby">
             <div class="hobby__info">
                 <h3>Programming</h3>
@@ -30,7 +55,7 @@ layout: base.njk
             </div>
         </div>
 
-        <div class="hobby">
+        {# <div class="hobby">
             <div class="hobby__image">
                 <img src="https://picsum.photos/id/338/800/450" alt="" />
             </div>
@@ -58,6 +83,6 @@ layout: base.njk
                 <h3>Photography</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt repellendus recusandae exercitationem aut, unde temporibus non dolores hic, quibusdam fugiat et molestias nihil dignissimos voluptatibus tenetur eius minima. Tempore, porro.</p>
             </div>
-        </div>
+        </div> #}
     </div>
 </div>
