--- a/src/tags.html
+++ b/src/tags.html
@@ -14,7 +14,7 @@ layout: base
 <div class="section">
     <div class="section__content section__content--narrow align-c">
         <h1><a href="/">書く<span>・</span>Blog</a></h1>
-        <h2>All posts tagged with &lsquo;{{ tag }}&rsquo;. Page {{ pagination.pageNumber }}</h2>
+        <h2>All posts tagged with <span>#{{ tag }}</span></h2>
     </div>
 
     <div class="section__content">
