Changed hobby page styles

--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -11,8 +11,8 @@ layout: base.njk
 
     <div class="section__content section__content--wide">
         <div class="hobby">
-            <div class="hobby__image">
-                <img src="https://picsum.photos/id/315/800/450" alt="" />
+            <div class="hobby__image" style="--bg:url(/assets/images/hobbies/japanese.jpeg)">
+                <div class="hobby__label">Japanese</div>
             </div>
             <div class="hobby__info">
                 <h3>Japanese</h3>
